# firmware

ioterminal_ssais_firmware-SSAIA-STAGE-Dojo-SCREEN/: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
ioterminal_ssais_firmware-SSAIA-STAGE-Dojo-SCREEN/main/: CMakeLists.txt  idf_component.yml
ioterminal_ssais_firmware-SSAIA-STAGE-Dojo-SCREEN/main/inc/: board.h  business.h  common.h  data_type.h  default_config.h  gpio_peripheral.h  hid_host.h  modbus.h  mqtt.h  mqtt_cmd_type.h  nvs_storage.h  ota.h  screen.h  user_tasks.h
ioterminal_ssais_firmware-SSAIA-STAGE-Dojo-SCREEN/main/src/: main.c
ioterminal_ssais_firmware-SSAIA-STAGE-Dojo-SCREEN/main/src/applications/: networkTask.c
ioterminal_ssais_firmware-SSAIA-STAGE-Dojo-SCREEN/main/src/applications/business/: ledStripIndicationTask.c
ioterminal_ssais_firmware-SSAIA-STAGE-Dojo-SCREEN/main/src/applications/mqtt/: mqttTask.c
ioterminal_ssais_firmware-SSAIA-STAGE-Dojo-SCREEN/main/src/applications/mqtt/types/: business_type.c
ioterminal_ssais_firmware-SSAIA-STAGE-Dojo-SCREEN/main/src/applications/ota/: ota.c
ioterminal_ssais_firmware-SSAIA-STAGE-Dojo-SCREEN/main/src/common/: common.c
ioterminal_ssais_firmware-SSAIA-STAGE-Dojo-SCREEN/main/src/hardware/gpio/: gpio_input.c
ioterminal_ssais_firmware-SSAIA-STAGE-Dojo-SCREEN/main/src/hardware/usb/: hid_host.c
ioterminal_ssais_firmware-SSAIA-STAGE-Dojo-SCREEN/main/src/modules/display/: screen.c
ioterminal_ssais_firmware-SSAIA-STAGE-Dojo-SCREEN/main/src/modules/display/pages/: 0_system_info_set.c  10_dio_set.c  11_project_set.c  12_screen_set.c  13_ssais_project_set.c  15_check_dialog.c  2_protocol_set.c  4_ntp_set.c  7_ledstrip_set.c  8_ledstrip_debug.c
ioterminal_ssais_firmware-SSAIA-STAGE-Dojo-SCREEN/main/src/modules/storage/: nvs_storage.c
(+112 files in other folders)
